<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha=".8"
    android:theme="@style/AppTheme"
    tools:context=".ui.login.LoginActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/multimedialab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="4dp"
        android:alpha=".8"
        android:background="@drawable/shape_text_box"
        android:text="@string/textLogin"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_email_login"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="16dp"
        android:alpha=".9"
        android:background="@drawable/shape_text_box"
        android:gravity="center_vertical"
        android:hint="@string/textEmail"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText_password_login"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:alpha=".9"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:background="@drawable/shape_text_box"
        android:hint="@string/textPass"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/editText_email_login"
        app:layout_constraintStart_toStartOf="@+id/editText_email_login"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_login" />

    <TextView
        android:id="@+id/textView_forgot_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textForgotPass"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText_password_login"
        app:layout_constraintStart_toStartOf="@+id/editText_password_login"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_text_box"
        android:text="@string/textButtonLogin"
        android:textAlignment="center"
        android:alpha=".8"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView_forgot_pass"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView_forgot_pass"
        app:layout_constraintTop_toBottomOf="@+id/textView_forgot_pass" />

    <TextView
        android:id="@+id/textView_go_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/textAlreadyRegister"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText_password_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_password_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView_forgot_pass"
        app:layout_constraintStart_toStartOf="@+id/textView_forgot_pass"
        app:layout_constraintTop_toBottomOf="@+id/textView_forgot_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>