<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_login" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/etEmailLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etEmailLogin"
        app:srcCompat="@drawable/ic_username" />

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingStart="10dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_edittext_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/textEmail"
        android:textSize="12sp"
        android:background="@drawable/shape_textview_box"
        app:layout_constraintBottom_toTopOf="@+id/etEmailLogin"
        app:layout_constraintStart_toStartOf="@+id/etEmailLogin"
        app:layout_constraintTop_toTopOf="@+id/etEmailLogin" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/etPasswordLogin"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/etPasswordLogin"
        app:srcCompat="@drawable/ic_password" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_edittext_box"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:ems="10"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/etEmailLogin"
        app:layout_constraintStart_toStartOf="@+id/etEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_textview_box"
        android:layout_marginStart="16dp"
        android:text="@string/textPass"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordLogin"
        app:layout_constraintStart_toStartOf="@+id/etPasswordLogin"
        app:layout_constraintTop_toTopOf="@+id/etPasswordLogin" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:text="@string/textForgotPass"
        app:layout_constraintEnd_toEndOf="@+id/etPasswordLogin"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button_box"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/textButtonLogin"
        app:layout_constraintEnd_toEndOf="@+id/tvForgotPass"
        app:layout_constraintStart_toStartOf="@+id/tvForgotPass"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPass" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textAlreadyRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signIn" />

    <TextView
        android:id="@+id/tv_btn_go_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signIn" />
</androidx.constraintlayout.widget.ConstraintLayout>