<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivPhotoRegister"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:background="@drawable/image_login"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/etEmailRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etEmailRegister"
        app:srcCompat="@drawable/ic_email" />

    <EditText
        android:id="@+id/etEmailRegister"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_edittext_box"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView2"
        app:layout_constraintTop_toBottomOf="@+id/ivPhotoRegister" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/shape_textview_box"
        android:text="@string/textEmail"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmailRegister"
        app:layout_constraintStart_toStartOf="@+id/etEmailRegister"
        app:layout_constraintTop_toTopOf="@+id/etEmailRegister"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/etPasswordRegister"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView2"
        app:layout_constraintTop_toTopOf="@+id/etPasswordRegister"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@drawable/ic_password" />

    <EditText
        android:id="@+id/etPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edittext_box"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/etEmailRegister"
        app:layout_constraintStart_toStartOf="@+id/etEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/etEmailRegister" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Password"
        android:textSize="12sp"
        android:background="@drawable/shape_textview_box"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordRegister"
        app:layout_constraintStart_toStartOf="@+id/etPasswordRegister"
        app:layout_constraintTop_toTopOf="@+id/etPasswordRegister" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView4"
        android:layout_width="22dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/etPassConfirmed"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView3"
        app:layout_constraintTop_toTopOf="@+id/etPassConfirmed"
        app:srcCompat="@drawable/ic_confirm_pass" />

    <EditText
        android:id="@+id/etPassConfirmed"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:paddingStart="10dp"
        android:background="@drawable/shape_edittext_box"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etPasswordRegister"
        app:layout_constraintStart_toStartOf="@+id/etPasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordRegister" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/shape_textview_box"
        android:text="Confirm password"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/etPassConfirmed"
        app:layout_constraintStart_toStartOf="@+id/etPassConfirmed"
        app:layout_constraintTop_toTopOf="@+id/etPassConfirmed" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textAlreadyRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signUp" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        android:textStyle="bold"
        android:text="@string/textButtonRegister"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_button_box"
        app:layout_constraintEnd_toEndOf="@+id/etPassConfirmed"
        app:layout_constraintStart_toStartOf="@+id/appCompatImageView4"
        app:layout_constraintTop_toBottomOf="@+id/etPassConfirmed" />

    <TextView
        android:id="@+id/tv_btn_goLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signUp" />

    <ProgressBar
        android:id="@+id/registerProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassConfirmed" />


</androidx.constraintlayout.widget.ConstraintLayout>